# Taskops

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  tmpclaude-eee6-cwd
backend/: .env.example  .env.production  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_db_connection.py  test_network.py  tmpclaude-207b-cwd
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_tasks_table.py  003_create_conversations_table.py  004_create_messages_table.py  005_enhance_tasks_table.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/chat/: __init__.py  config.py
backend/app/chat/agent/: __init__.py  error_handler.py  factory.py  prompts.py  tool_processor.py
backend/app/chat/mcp_server/: __init__.py  error_handler.py  server.py  (+3 more)
backend/app/dependencies/: __init__.py  auth.py
backend/app/mcp_server/: __init__.py  server.py
backend/app/middleware/: auth.py  cors.py  security.py
backend/app/models/: task.py  user.py
backend/app/routers/: __init__.py  auth.py  health_router.py  tasks.py
backend/app/schemas/: __init__.py  task.py  user.py
backend/app/utils/: __init__.py  logging.py
backend/tests/: conftest.py  test_auth.py  test_isolation.py  test_stateless.py  test_tasks.py
backend/tests/test_endpoints/: __init__.py  test_chat_endpoint.py
backend/tests/test_tools/: __init__.py  test_add_task.py  test_complete_task.py  test_delete_task.py  test_list_tasks.py  test_update_task.py
(+139 files in other folders)
